[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pfcheeshmc"              
version = "0.1.0"
description = "Pathfinder-ChEES-HMC posterior sampler compatible with PyMC model using BlackJAX backend"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["pfcheeshmc"]             